Use SSH multiplexing instead of multiple connections
Hello,
when gvfsd is started with SSH_AUTH_SOCK in its env, it can make use of a running ssh-agent
for sftp mounting. Keys can be added to ssh-agent via the -c
flag to ssh-add
, indicating that each use fo the key should be confirmed by ssh-askpass
. So far so good.
When doing so and then attempting to mount an SFTP resource (e.g with gio mount sftp://server/data
), I will be prompted to confirm use of the SSH key - twice. This is weird and might make some people suspicious too. Once should be enough.
Thanks a lot!
Best regards
Edited by Ondrej Holy