sftp: Use connection multiplexing instead of multiple connections

Currently, two connections are established in order to be responsive
even during file transfers. However, this causes duplicated prompts
when ssh-askpass is used. Let's use connection multiplexing instead
to avoid those duplicated prompts.

Fixes: https://gitlab.gnome.org/GNOME/gvfs/-/issues/510